# chromium-fork-browser

agents/prompts/templates/: pauli_dev_browser.md
chrome/browser/resources/pauli_browser/: .gitignore  ARCHITECTURE.md  BUILD.gn  DEVELOPMENT.md  INTEGRATION.md  README.md  SUMMARY.md  index.html  index.tsx  package.json  tsconfig.json
chrome/browser/resources/pauli_browser/agent_bridge/: client.ts  manager.ts
chrome/browser/resources/pauli_browser/api/gdrive/: client.ts
chrome/browser/resources/pauli_browser/api/github/: client.ts
chrome/browser/resources/pauli_browser/api/notion/: client.ts
chrome/browser/resources/pauli_browser/command_palette/: CommandPaletteContainer.tsx  registry.ts
chrome/browser/resources/pauli_browser/dashboard/: DashboardApp.tsx  types.ts
chrome/browser/resources/pauli_browser/dashboard/components/: AgentStatusPanel.tsx  ProjectsPanel.tsx  SyncStatusIndicator.tsx  TasksPanel.tsx  WorkspaceNavigation.tsx
chrome/browser/resources/pauli_browser/voice/: voice_service.ts
